@@ -1,3 +1,8 @@
+2002-03-19 Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm: (_lists)  Bugfix:  initialize
+	variable.  Thanks to Roger Klorese.
+
 2002-03-17 Michael Yount <csf@moscow.com>
 
 	* bin/mj_enqueue:  Exit after sending a "Hello" message
